[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version =  "0.8.8", features =["default"] }
tokio = {version = "1.49.0" ,features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"

chrono = {version= "0.4", features = ["serde"] }

serde = {version =  "1.0", features = ["derive"] }
serde_json = "1.0"


reqwest = {version = "0.13", features = ["json"] }
